# lzw-compression

./: .gitignore  CMakeLists.txt  README.md
src/: compress.cpp  compress.h  comptable.cpp  comptable.h  decompress.cpp  decompress.h  decomptable.cpp  decomptable.h  klzw.h  main.cpp  utils.cpp  utils.h
testing/: CMakeLists.txt  compress.cpp  decompress.cpp  helloworldtest.cpp
